--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "api/index.php": { "runtime": "vercel-php@0.7.1" }
     },
     "routes": [{
-        "src": "/(.*)",
+        { "src": "/api/shopify-products", "dest": "/api/index.php" },
         "dest": "/api/index.php"
     }],
     "env": {
