--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,13 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.7.1" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
+    "routes": [
+        { "src": "/api/shopify-products", "dest": "/api/index.php" },
+        { "src": "/api/featured-products", "dest": "/api/index.php" },
+        { "src": "/api/products/([^/]+)", "dest": "/api/index.php" },
+        { "src": "/api/checkout", "dest": "/api/index.php" },
+        { "src": "/(.*)", "dest": "/api/index.php" }
+    ]
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
