--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
         "src": "/(.*)",
         "dest": "/api/index.php",
         "headers": {
-            "Access-Control-Allow-Origin": "https://shoes-inky-seven.vercel.app",
+            "Access-Control-Allow-Origin": "https://shoes1-omega.vercel.app",
             "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
             "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With",
             "Access-Control-Allow-Credentials": "true"
